--- a/style.css
+++ b/style.css
@@ -294,7 +294,7 @@ footer {
     }
     
     section iframe {
-        min-width: 280px;
+        width: 100%;
         height: 220.5px;
     }
     section h2 {
