--- a/style.css
+++ b/style.css
@@ -295,8 +295,9 @@ footer {
     
     section iframe {
         width: 100%;
-        min-width: 250px;
+        min-width: 245px;
         height: 200px;
+        margin: 0 auto;
     }
     section h2 {
       text-align: center;
