--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ input[type=submit]:hover {
     margin-bottom: 10px;
 }
 footer {
-    background-color: #000000;
+    background-color: #212121;
     color: #E9DDD4;
     font-size: 14px;
 }
@@ -327,6 +327,7 @@ footer {
     .footer-container {
         flex-direction: column;
         align-items: center;
+        width: 100%;
     }
     .footer-section {
         flex-basis: 50%;
