--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ footer {
 }
 #chinikabisa {
     text-align: center;
-    margin-bottom: 10px;
+    padding-bottom: 10px;
 }
 @media (max-width:930px) {
     .nav {
