--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ section audio {
 form {
     width: 80%;
     min-width: 280px;
-    margin: 0 auto;
+    margin: 20px auto;
 }
 label {
     display: block;
